<resources>
    <!-- common -->
    <string name="app_name">WeatherApp</string>
    <string name="img_content_dec_app_logo">app Logo</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- form validation -->
    <string name="error_field_required">This field is Required</string>
    <string name="error_five_char_long">it should at least 5 chars long</string>
    <string name="error_start_with_number">The username does not start with a number</string>
    <string name="error_contain_white_space">Password must not contain any Space</string>
    <string name="error_enter_pass_first">please enter first password to match</string>
    <string name="error_pass_can_not_be_blank">password can\'t be blank</string>
    <string name="error_pass_not_matched">password doesn\'t matched</string>
    <string name="error_must_contain_digit">Password must contain one digit</string>
    <string name="error_must_contain_capital_letter">Password must contain one capital letter</string>
    <string name="error_weak_password">Weak Password, it should be at least 6 char long</string>
    <string name="error_must_contain_spacial_char">Password must contain one special character</string>
    <string name="error_invalid_email">Invalid Email Address</string>

    <!-- signup  -->
    <string name="login_logo_image">LoginImage</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="repeat_password_hint">Confirm Password</string>
    <string name="already_account_login_text">Already have account?</string>
    <string name="login">Login</string>
    <string name="create_user_success_message">User Created Successfully!</string>

    <!-- login   -->
    <string name="login_button_text">Login</string>
    <string name="new_account_signup_text">Don\'t have an account?</string>
    <string name="error_no_user_with_email">No User Exist with this Email</string>
    <string name="error_wrong_password">wrong Password</string>

    <!-- main -->
    <string name="logout">Logout</string>
    <string name="logout_success">Logout Successfully.</string>

    <!-- Weather Screen-->
    <string name="today_s_weather">Today\'s Weather</string>
    <string name="desc_weather_condition_icon">weather condition icon</string>
    <string name="weather_condition">Sunny</string>
    <string name="sunrise_image">sunrise image</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="sunset_image">sunset image</string>
    <string name="temp_in_celsius">%.2f°C</string>
    <string name="weather_icon_url">https://openweathermap.org/img/wn/%1$s@2x.png</string>
    <string name="location_city_state">%s , %s</string>

    <!-- WeatherHistory Screen   -->
    <string name="msg_history_not_available">No History Available</string>
    <string name="error_failed_delete_history">Failed to Delete History.</string>
    <string name="success_history_deleted">History Deleted Successfully!</string>
    <string name="delete_all">Delete All</string>
    <string name="confirm_clear_history">Confirm History Clear?</string>
    <string name="erase_history_forever">This will erase your history forever.</string>

</resources>