<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.weather.WeatherFragment">
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weatherViewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/weatherLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_35sdp"
            android:text="@string/today_s_weather"
            android:textAppearance="?textAppearanceHeadline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_temprature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:textAppearance="?textAppearanceHeadline4"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_weather_logo"
            app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
            app:layout_constraintTop_toTopOf="@+id/iv_weather_logo"
            tools:text="28.4 C" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:textAppearance="?textAppearanceHeadline6"
            app:drawableStartCompat="@drawable/baseline_location_on_24"
            app:drawableTint="@android:color/holo_red_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weatherLabel"
            tools:text="Mumbai , IN" />

        <ImageView
            android:id="@+id/iv_weather_logo"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:contentDescription="@string/desc_weather_condition_icon"
            app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
            app:layout_constraintTop_toBottomOf="@+id/tv_location"
            tools:src="@drawable/baseline_wb_sunny_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tv_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_condition"
            app:layout_constraintEnd_toEndOf="@+id/iv_weather_logo"
            app:layout_constraintStart_toStartOf="@+id/iv_weather_logo"
            app:layout_constraintTop_toBottomOf="@+id/iv_weather_logo" />


        <ImageView
            android:id="@+id/iv_sunrise"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/sunrise_image"
            android:src="@drawable/sunrise"
            app:layout_constraintEnd_toEndOf="@+id/iv_weather_logo"
            app:layout_constraintStart_toStartOf="@+id/iv_weather_logo"
            app:layout_constraintTop_toBottomOf="@+id/tv_condition" />


        <TextView
            android:id="@+id/tv_sunrise_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunrise"
            android:textAppearance="?textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="@+id/tv_temprature"
            app:layout_constraintTop_toTopOf="@+id/iv_sunrise" />

        <TextView
            android:id="@+id/tv_sunrise_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_sunrise_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_sunrise_label"
            tools:text="6:00 AM" />

        <TextView
            android:id="@+id/tv_sunset_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunset"
            android:textAppearance="?textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="@+id/tv_sunrise_label"
            app:layout_constraintTop_toTopOf="@+id/iv_sunset" />

        <ImageView
            android:id="@+id/iv_sunset"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/sunset_image"
            android:src="@drawable/sunset"
            app:layout_constraintStart_toStartOf="@+id/iv_sunrise"
            app:layout_constraintTop_toBottomOf="@+id/iv_sunrise" />

        <TextView
            android:id="@+id/tv_sunset_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_sunset_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_sunset_label"
            tools:text="6:30 PM" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:visibility="visible" />

    <!--location off layout-->
    <LinearLayout
        android:id="@+id/layout_location_denied"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:src="@drawable/baseline_location_off_24" />

        <TextView
            android:id="@+id/tv_location_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_16ssp"
            tools:text="to fetch weather, Location is Required \n Please Allow Location Permission and retry." />

        <Button
            android:id="@+id/btn_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_4sdp"
            android:text="Retry"

            />
    </LinearLayout>


</FrameLayout>



